--- a/style.css
+++ b/style.css
@@ -1,59 +1,174 @@
-/* *{
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-} */
+}
 
 [class*="col-"]{
   border: none;
   height: auto;
 }
 
-.row{
-  text-align: center;
-}
-
 section{
   overflow: hidden;
   background-color: white;
 }
-.row nav{
-  background-color: darkblue;
+
+/* nav bar */
+.navbar{
+  margin:0;
+  border: 0;
+  border-radius: 0;
+  background-color:  #00334d;
 }
-section#jumbo{
-  background-color: #339966;
+.navbar-right{
+  margin-right: 30px;
+  padding: 15px;
 }
-section#about{
-  background-color: #339966;
+.navbar-header{
+  padding: 15px;
 }
-section#footer{
-  background-color: blue;
+.navbar-default .navbar-nav>li>a,
+.navbar-default .navbar-brand{
+  color: white;
 }
-section#copy{
-  background-color: darkblue;
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #00334d;
+}
+
+li {
+  float: right;
+}
+
+li a {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+}
+
+/* sezione jumbo */
+#jumbo{
+  text-align: center;
+  background-color: #00cca3;
+}
+#jumbo h1{
+  font-size: 3em;
+  line-height: 3.5em;
+  color:white;
+  font-weight: 700;
+}
+#jumbo img{
+  max-width: 80%
+}
+
+
+
+/* sezione portfolio */
+#portfolio{
+  color: #000;
+  text-align: center;
+}
+#portfolio h1 {
+  font-size: 3em;
+  line-height: 3.5em;
+  font-weight: 700;
+  color: #00334d;
+}
+#portfolio img{
+  max-width:100%;
+  margin-bottom: 10%;
+  border-radius: 5%;
+  cursor:pointer;
+}
+
+#portfolio .margine{
+  margin-top: 30px;
 }
 
 /* sezione about */
 #about{
+  margin-top: 5%;
+  text-align: center;
   color: #fff;
+  background-color: #00cca3;
 }
 #about h1 {
-  font-size: 2em;
+  font-size: 3em;
   line-height: 3.5em;
+  font-weight: 700;
 }
-
+#about p{
+  font-family: sans-serif;
+  font-size: 2rem;
+    font-weight: 300;
+    margin-bottom: 2em;
+}
 
 /* sezione contatti */
-#contatti h3{
-  font-size: 2em;
-  line-height: 3.5em;
+#contatti{
+ margin-bottom: 50px;
 }
+#contatti h3{
+  text-align: center;
+  font-size: 3em;
+  line-height: 3.5em;
+  font-weight: 700;
+}
+
 #contatti .form-group input,
 #contatti .form-group textarea {
   border: none;
   border-bottom: solid 1px #ccc;
   box-shadow: none;
 }
+#contatti .form-control{
+ border-radius: 0;
+}
+
 #contatti .btn-default {
-  color: darkblue;
+  color: #fff;
+  background-color: #00cca3;
+  padding: 12px;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+
+
+
+/* sezione footer */
+#footer{
+  background-color: #00334d;
+  padding: 30px 0;
+  margin-top: 5%;
+  text-align: center;
+  color: #fff;
+
+}
+#footer h3{
+  text-align: center;
+  font-size: 2em;
+  line-height: 2.5em;
+  font-weight: 700;
+}
+#footer p{
+  font-family: sans-serif;
+  font-size: 2rem;
+    font-weight: 300;
+    margin-bottom: 2em;
+}
+
+/* sezione copy */
+#copy{
+  text-align: center;
+  background-color: #001a33;
+  padding: 20px 0;
+}
+#copy h6{
+  color:#fff;
 }
